--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <p>
             Created by <a href="https://github.com/umarovOdil?tab=repositories">Umarjonov Odilbek</a> 
             with 
-            <a href="https://www.npmjs.com/package/markdown">codemirror JS</a>
+            <a href="https://codemirror.net/">codemirror JS</a>
         </p>
     </div>
 
